--- a/src/design.css
+++ b/src/design.css
@@ -106,7 +106,7 @@
     align-items: center;
     justify-content: center;
     color:white;
-    background-color: red;
+    background-color: #dc3545;
     height: 50px;
     width: 50px;
     border-radius: 20%;
@@ -114,7 +114,7 @@
     margin-left: 10px;
 }
 #trash:hover{
-    border: 1px solid red;
+    border: 1px solid #dc3545;
 
 }
 .product{
